--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ smoltcp = { version = "0.11.0", default-features = false, features = [
 ] }
 embassy-executor = "0.6.0"
 embassy-futures = "0.1.1"
-embassy-time = "0.3.1"
+embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
 esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy", features = ["esp32"] }
 esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
 critical-section = "1.1.3"
