--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-hal = { path = "../esp-hal/esp-hal", features = ["esp32"] }
+esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal", features = [
+    "esp32",
+] }
 log = { version = "0.4.21" }
 esp-alloc = "0.4.0"
 embedded-svc = { version = "0.26.1", default-features = false, features = [] }
 embedded-io = "0.6.1"
-esp-wifi = { path = "../esp-hal/esp-wifi", features = [
+esp-wifi = { git = "https://github.com/esp-rs/esp-hal", package = "esp-wifi", features = [
     "esp32",
     "phy-enable-usb",
     "utils",
@@ -32,7 +34,9 @@ smoltcp = { version = "0.11.0", default-features = false, features = [
 embassy-executor = "0.6.0"
 embassy-futures = "0.1.1"
 embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
-esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy", features = ["esp32"] }
+esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal-embassy", features = [
+    "esp32",
+] }
 esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
 critical-section = "1.1.3"
 static_cell = { version = "2.1.0", features = ["nightly"] }
