--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,6 @@ smoltcp = { version = "0.11.0", default-features = false, features = [
     "socket-tcp",
     "socket-udp",
 ] }
-embassy-executor = "0.6.0"
 embassy-futures = "0.1.1"
 embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
 esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal-embassy", features = [
@@ -50,6 +49,7 @@ esp-backtrace = { version = "0.14.0", features = [
 ] }
 esp-println = { version = "0.11.0", features = ["log"] }
 ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }
+embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768"] }
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
