--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,34 +6,35 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-hal = { path = "../esp-hal/esp-hal/", features = [
+esp-hal = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal", features = [
     "esp32",
 ] }
 log = { version = "0.4.21" }
-esp-alloc = "0.4.0"
+esp-alloc = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-alloc" }
 embedded-io = "0.6.1"
 heapless = { version = "0.8.0", default-features = false }
 embassy-futures = "0.1.1"
 embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
-esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy/", features = [
+esp-hal-embassy = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal-embassy", features = [
     "esp32",
 ] }
 esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
 critical-section = "1.1.3"
-static_cell = { version = "2.1.0", features = ["nightly"] }
+static_cell = { version = "2.1.0" }
 bitfield-struct = "0.8.0"
 atomic-waker = "1.1.2"
 embassy-sync = "0.6.0"
-esp-backtrace = { path = "../esp-hal/esp-backtrace/", features = [
+esp-backtrace = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-backtrace", features = [
     "esp32",
     "panic-handler",
     "println",
 ] }
-esp-println = { path = "../esp-hal/esp-println/", features = ["log"] }
-ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }
-embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768"] }
+esp-println = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-println", features = ["log"] }
+embassy-executor = { version = "0.6.0" }
 macro-bits = "0.1.5"
-esp32 = { version = "0.33.0", path = "../esp-pacs/esp32" }
+esp32 = { version = "0.33.0", git = "https://github.com/esp32-open-mac/esp-pacs", package = "esp32" }
+ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", version = "0.5.0" }
+embedded-io-async = "0.6.1"
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
