--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 
-esp32-wifi-hal-rs = { path = "../esp32-wifi-hal-rs/" }
+esp32-wifi-hal-rs = { path = "../esp32-wifi-hal-rs/", features = ["log"] }
 
 # ESP-HAL dependencies
 esp-hal = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal", features = [
