--- a/esp32-wifi-hal-rs/Cargo.toml
+++ b/esp32-wifi-hal-rs/Cargo.toml
@@ -6,25 +6,15 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-# ESP-HAL dependencies
-esp-hal = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal", features = [
-    "esp32",
-] }
-esp-alloc = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-alloc" }
-esp-wifi-sys = { version = "0.5.0", features = ["esp32"] }
-esp-backtrace = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-backtrace", features = [
-    "esp32",
-    "panic-handler",
-    "println",
-] }
-esp-println = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-println", features = ["log"] }
-esp32 = { version = "0.33.0", git = "https://github.com/esp32-open-mac/esp-pacs", package = "esp32" }
+# ESP-HAL
+esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = ["esp32", "unstable"] }
+esp-wifi-sys = { version = "0.7.0", features = ["esp32"] }
+esp32 = { git = "https://github.com/esp-rs/esp-pacs", rev = "ffbee35069d137ef611097d39fa7734c299ce124" }
 
 # Embassy dependencies
 embassy-futures = "0.1.1"
 embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
-embassy-sync = "0.6.0"
-
+embassy-sync = "0.6.1"
 
 log = { version = "0.4.21", optional = true }
 critical-section = "1.1.3"
@@ -33,7 +23,6 @@ bitfield-struct = "0.8.0"
 atomic-waker = "1.1.2"
 macro-bits = "0.1.5"
 defmt = { version = "0.3.8", optional = true }
-ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", version = "0.5.0", default-features = false }
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
